--- a/单例.md
+++ b/单例.md
@@ -1,3 +1,5 @@
+这是一个单例的例子
+```javascript
 var createDiv = (function(){
   var instance;
 
@@ -24,3 +26,6 @@ var a = new createDiv('sin1');
 var b = new createDiv('sin2');
 
 console.log(a === b);  // 输出：true
+```
+通过几个console.log()  
+我开始有点单例的感觉了  
