--- a/单例.md
+++ b/单例.md
@@ -1,4 +1,4 @@
-这是一个单例的例子
+这是在网上扒下来的一个单例的例子
 ```javascript
 var createDiv = (function(){
   var instance;
@@ -29,3 +29,6 @@ console.log(a === b);  // 输出：true
 ```
 通过几个console.log()  
 我开始有点单例的感觉了  
+单例有几种实现的方法  
+上面的这种比较直白易懂  
+
