--- a/单例.md
+++ b/单例.md
@@ -9,31 +9,36 @@ new一下出一个实例，再new一下再出一个实例
 这是在网上扒下来的一个单例的例子
 ```javascript
 var createDiv = (function(){
-  var instance;
+	var instance;
 
-  var createDiv = function(html){
-      if(instance){
-        return instance;
-      }
+	var createDiv = function(html){
+		if(instance){console.log(2);
+		return instance;
+		
+	}
 
-      this.html = html;
-      this.init();
-      return instance = this;
-  };
+	this.html = html;
+	this.init();
+	console.log(1);
+	return instance = this;
+	};
 
-  createDiv.prototype.init = function(){
-      var div = document.createElement('div');
-      div.innerHTML = this.html;
-      document.body.appendChild(div);
-  };
+	createDiv.prototype.init = function(){
+		var div = document.createElement('div');
+		div.innerHTML = this.html;
+		document.body.appendChild(div);
+		
+	};
 
-  return createDiv;
+	return createDiv;
 })();
 
 var a = new createDiv('sin1');
 var b = new createDiv('sin2');
 
-console.log(a === b);  // 输出：true
+//console.log(a === b);  // 输出：true
+//输出：1
+//		2
 ```
 通过几个console.log()  
 我开始有点单例的感觉了  
