--- a/单例.md
+++ b/单例.md
@@ -14,13 +14,12 @@ var createDiv = (function(){
 	var createDiv = function(html){
 		if(instance){console.log(2);
 		return instance;
-		
-	}
+		}
 
-	this.html = html;
-	this.init();
-	console.log(1);
-	return instance = this;
+		this.html = html;
+		this.init();
+		console.log(1);
+		return instance = this;
 	};
 
 	createDiv.prototype.init = function(){
@@ -37,11 +36,56 @@ var a = new createDiv('sin1');
 var b = new createDiv('sin2');
 
 //console.log(a === b);  // 输出：true
-//输出：1
-//		2
+//输出：
+//1
+//2
 ```
 通过几个console.log()  
 我开始有点单例的感觉了  
-单例有几种实现的方法  
-上面的这种比较直白易懂  
-
+具体的思路是：  
+####在构造函数createDiv()里创建一个实例instance，每次new createDiv()的时候先判断构造函数里的实例instance有没有被创建过，有的话就直接把实例instance丢回去；没有的话就创建instance丢回去，之后如果有再new createDiv()的话就把这个创建的instance丢回去  
+来把code走一遍  
+#####1.  
+```javascript var a = new createDiv('sin1');```创建实例a，传入参数"sin1"  
+#####2.
+```javascript
+var instance;
+var createDiv = function(html){...};
+```变量instance用来放实例，html是形参，实参就是上面传进来的"sin1"，即html="sin1"
+#####3.  
+```javascript  
+if(instance){console.log(2);  
+return instance;  
+}
+```判断是否有instance，因为没有创建过，所以就没有执行控制台出 2 直接往下走  
+#####4.
+```javascript
+this.html = html;
+this.init();
+```绑定createDiv对象的属性html，即createDiv.html=html="sin1"
+#####5.
+```javascript
+createDiv.prototype.init = function(){
+	var div = document.createElement('div');
+	div.innerHTML = this.html;
+	document.body.appendChild(div);
+};
+```绑定createDiv对象的方法init()，init()就是创建一个div元素，把createDiv.html写进div元素，再把div元素接到body  
+即<body><div>sin1</div></body>
+#####6.  
+```javascript
+console.log(1);
+return instance = this;
+```控制台输出 1 ，再把instance一路给回去  
+#####7.  
+```javascript
+var b = new createDiv('sin2');
+```把"sin2"给进去  
+#####8.
+```javascript
+if(instance){
+	console.log(2);
+	return instance;
+}
+```因为instance创建过了，执行if里面的，控制台出 2 ，把原来创建的instance一路丢回去，所以下面的控制台 1 就不用执行了  
+所以你a,b,c,d...再怎么new createDiv()，得到的都还是createDiv()里面的instance
