--- a/单例.md
+++ b/单例.md
@@ -51,13 +51,15 @@ var b = new createDiv('sin2');
 ```javascript
 var instance;
 var createDiv = function(html){...};
-```变量instance用来放实例，html是形参，实参就是上面传进来的"sin1"，即html="sin1"
+```  
+变量instance用来放实例，html是形参，实参就是上面传进来的"sin1"，即html="sin1"
 #####3.  
 ```javascript  
 if(instance){console.log(2);  
 return instance;  
 }
-```判断是否有instance，因为没有创建过，所以就没有执行控制台出 2 直接往下走  
+```  
+判断是否有instance，因为没有创建过，所以就没有执行控制台出 2 直接往下走  
 #####4.
 ```javascript
 this.html = html;
@@ -70,22 +72,26 @@ createDiv.prototype.init = function(){
 	div.innerHTML = this.html;
 	document.body.appendChild(div);
 };
-```绑定createDiv对象的方法init()，init()就是创建一个div元素，把createDiv.html写进div元素，再把div元素接到body  
+```  
+绑定createDiv对象的方法init()，init()就是创建一个div元素，把createDiv.html写进div元素，再把div元素接到body  
 即<body><div>sin1</div></body>
 #####6.  
 ```javascript
 console.log(1);
 return instance = this;
-```控制台输出 1 ，再把instance一路给回去  
+```  
+控制台输出 1 ，再把instance一路给回去  
 #####7.  
 ```javascript
 var b = new createDiv('sin2');
-```把"sin2"给进去  
+```  
+把"sin2"给进去  
 #####8.
 ```javascript
 if(instance){
 	console.log(2);
 	return instance;
 }
-```因为instance创建过了，执行if里面的，控制台出 2 ，把原来创建的instance一路丢回去，所以下面的控制台 1 就不用执行了  
+```  
+因为instance创建过了，执行if里面的，控制台出 2 ，把原来创建的instance一路丢回去，所以下面的控制台 1 就不用执行了  
 所以你a,b,c,d...再怎么new createDiv()，得到的都还是createDiv()里面的instance
