--- a/单例.md
+++ b/单例.md
@@ -74,7 +74,7 @@ createDiv.prototype.init = function(){
 };
 ```  
 绑定createDiv对象的方法init()，init()就是创建一个div元素，把createDiv.html写进div元素，再把div元素接到body  
-即<body><div>sin1</div></body>
+即```html<body><div>sin1</div></body>```
 #####6.  
 ```javascript
 console.log(1);
