--- a/单例.md
+++ b/单例.md
@@ -1,3 +1,4 @@
+#单例 Singleton  
 ####理解
 创建对象的实例其实可以理解为其他语言的创建类的对象  
 就是类->对象，对象->实例  
@@ -94,4 +95,70 @@ if(instance){
 }
 ```  
 因为instance创建过了，执行if里面的，控制台出 2 ，把原来创建的instance一路丢回去，所以下面的控制台 1 就不用执行了  
-所以你a,b,c,d...再怎么new createDiv()，得到的都还是createDiv()里面的instance
+所以你a,b,c,d...再怎么new createDiv()，得到的都还是createDiv()里面的instance  
+So far so good，明白了，感觉自己无敌了有木有  
+###但是  
+问题来了，这样的话createDiv里把实例的创建、初始化和单例绑在一起了，我们不能用这个对象再创建第二个实例了，这种一次性的东西是不环保的，所以我们要把对象构造和单例创建分开，实现循环利用，保护环境  
+****
+下面是网上扒下来的另一个例子  
+```javascript
+var createDiv = function(html){
+	this.html = html;
+	this.init();
+};
+
+createDiv.prototype.init = function(){
+	var div = document.createElement('div');
+	div.innerHTML = this.html;
+	document.body.appendChild(div);
+};
+
+// 引入代理类 proxySingletonCreateDiv
+var proxySingletonCreateDiv = (function(){
+	var instance;
+	return function(html){
+		if(!instance){
+			instance = new createDiv(html);
+		}
+		return instance;
+	}
+})();
+
+var a = new proxySingletonCreateDiv('sin1')；
+var b = new proxySingletonCreateDiv('sin2');
+```
+这个叫用代理实现单例，就是把实例构造和单例实现分离开  
+我们看看code  
+#####1.  
+```javascript
+var createDiv = function(html){
+	this.html = html;
+	this.init();
+};
+createDiv.prototype.init = function(){
+	var div = document.createElement('div');
+	div.innerHTML = this.html;
+	document.body.appendChild(div);
+};
+```
+这个就是createDiv的构造和初始化，这个就可以重复利用  
+#####2.
+```javascript
+var proxySingletonCreateDiv = (function(){
+	var instance;
+	return function(html){
+		if(!instance){
+			instance = new createDiv(html);
+		}
+		return instance;
+	}
+})();
+```
+proxySingletonCreateDiv是用来创建createDiv单例的，流程就是：  
+* 调用proxySingletonCreateDiv()  
+* 闭包把instance保护起来  
+* !instance 非判断instance，没有的话if为 true，有的话if为 false，就是说如果没创建过的单例instance的话就new一下createDiv()，有的话就直接把已有的instance一路传回去  
+  
+这样，我们就把构造和单例分开了，让它们各施其职
+
+
