--- a/单例.md
+++ b/单例.md
@@ -159,6 +159,9 @@ proxySingletonCreateDiv是用来创建createDiv单例的，流程就是：
 * 闭包把instance保护起来  
 * !instance 非判断instance，没有的话if为 true，有的话if为 false，就是说如果没创建过的单例instance的话就new一下createDiv()，有的话就直接把已有的instance一路传回去  
   
-这样，我们就把构造和单例分开了，让它们各施其职
-
-
+这样，我们就把构造和单例分开了，让它们各施其职  
+  
+其实还有两种写法  
+第一种是在对象里挂一个单例的方法，不过使用的时候你就要记着这个对象有没有单例的方法和这个方法的名字  
+第二种是写一个构造单例的函数，有一个函数参数，要单例的时候就把对象的构造函数写在函数参数里传进单例的构造函数，其实这样的话建单例就要三个函数了，一个对象用的，一个单例用的，一个参数用的  
+所以我还是喜欢上面第二个例子里面的代理式单例
