--- a/鼠标滚动事件.md
+++ b/鼠标滚动事件.md
@@ -13,7 +13,9 @@ $("body").on("mousewheel DOMMouseScroll",function(){
 而是挂在 ###window.event  
 简单点就用 ###event
 有用的东西：  
-event.wheeldalta  
+event.wheelDelta  
 event.detail  
-因为鼠标坏坏的  
-具体的数据就下次再补
+event.deltaY  
+这是几个有用的  
+向上滚的话 event.wheelDelta > 0 , event.detail & event.deltaY < 0  
+向上滚的话 event.wheelDelta < 0 , event.detail & event.deltaY > 0  
