--- a/数组.md
+++ b/数组.md
@@ -1,6 +1,6 @@
 ###push() , unshift() , pop() , shift() 操作原数组
 ```javascript
-//push()
+//push()从后加
 var bePush = [];
 bePush.push(1);
 bePush.push(2);
@@ -9,7 +9,7 @@ console.log(bePush);
 //[1,2,3]
 
 
-//unshift()
+//unshift()从前加
 var beUnshift = [];
 beUnshift.unshift(1);
 beUnshift.unshift(2);
@@ -18,14 +18,14 @@ console.log(beUnshift);
 //[3,2,1]
 
 
-//pop()
+//pop()从后删
 var bePop = [1,2,3];
 bePop.pop();
 console.log(bePop);
 //[1,2]
 
 
-//shift
+//shift()从前删
 var beShift = [1,2,3];
 beShift.shift();
 console.log(beShift);
@@ -33,14 +33,14 @@ console.log(beShift);
 ```
 ###sort() , reverse() 操作原数组
 ```javascript
-//reverse()
+//reverse()倒序
 var beReverse=['a','b','c'];
 beReverse.reverse();
 console.log(beReverse);
 //['c','b','a']
 
 
-//sort(function)
+//sort(function)排序
 var beSort=[1,3,5,2,4,6];
 beSort(function(a,b){return a-b});
 console.log(beSort);
@@ -56,4 +56,40 @@ var beSort=[{name:'d',age:4},{name:'b',age:2},{name:'a',age:1},{name:'c',age:3}]
 beSort(function(a,b){return a.age-b.age});
 console.log(beSort);
 //[{name:'a',age:1},{name:'b',age:2},{name:'c',age:3},{name:'d',age:4}]
+```
+###slice() 返回新数组 , splice()操作原数组
+```javascript
+//slice(start[,end])截取,切的位置是元素的头
+//slice(开始位置[,结束位置])
+var beSlice = [0,1,2,3,4,5];
+var sliceArr = beSlice.slice(2);
+console.log(beSlice);
+console.log(sliceArr);
+//[0,1,2,3,4,5]
+//[2,3,4,5]
+
+var beSlice = [0,1,2,3,4,5];
+var sliceArr = beSlice.slice(2,4);
+console.log(beSlice);
+console.log(sliceArr);
+//[0,1,2,3,4,5]
+//[2,3]
+
+
+//splice(index,howmany[,item1,.....,itemX])删除与添加
+//splice(删除开始位置,删除个数[,添加元素1,.....,添加元素X])
+var beSplice = [0,1,2,3,4,5];
+beSplice.splice(2,2,'aa','bb');//从2开始，删2个，再加上'aa'和'bb'
+console.log(beSplice);
+//[0,1,'aa','bb',4,5]
+
+//用splice()剔除数组中的特定项
+var Ar = [1,2,3,2,4,2,5,2,6,2,7,2,8];
+for(var i=Ar.length-1;i>=0;i--){
+	if(Ar[i]==2) Ar.splice(i,1);
+}
+console.log(Ar);
+//[1,3,4,5,6,7,8]
+//要从后开始，这样才不会打乱index
+
 ```
