--- a/数组.md
+++ b/数组.md
@@ -93,3 +93,31 @@ console.log(Ar);
 //要从后开始，这样才不会打乱index
 
 ```
+###concat() 返回新数组 , join() 返回新字符串
+```javascript
+//concat(arrayX,arrayX,......,arrayX)可加数组或元素
+var a1 = [1,2,3];
+var a2 = [6,7,8];
+var anew = a1.concat(4,5,a2);
+console.log(anew);
+//[1,2,3,4,5,6,7,8]
+
+
+//join([separator])将数组中元素连一起放进一个字符串，可选分隔符，默认为","
+var a1 = ['a','b','c'];
+var str1 = a1.join();
+console.log(str1);
+//a,b,c
+
+var a1 = ['a','b','c'];
+var str1 = a1.join("");
+console.log(str1);
+//abc
+
+var a1 = ['a','b','c'];
+var str1 = a1.join("--");
+console.log(str1);
+//a--b--c
+
+
+```
