--- a/数组.md
+++ b/数组.md
@@ -118,6 +118,30 @@ var a1 = ['a','b','c'];
 var str1 = a1.join("--");
 console.log(str1);
 //a--b--c
-
-
+```
+###map()
+```javascript
+var a1 = [1,2,3];
+a1.map(function(){console.log(arguments);});
+//[1 , 0 , [1,2,3]]
+//[2 , 1 , [1,2,3]]
+//[3 , 2 , [1,2,3]]
+//传入函数的参数为(value,index,array)
+//可以进行遍历数组，逐一对元素进行操作
+```
+###indexOf()  返回第一个找的的index值，没有找到返回-1
+```javascript
+//indexOf(查找的值[,开始查找的位置])
+var a = { foo: 'bar' };
+var b = [a, 2];
+console.log(b.indexOf(1))
+//-1
+console.log(b.indexOf({ foo: 'bar' }))
+//-1
+console.log(b.indexOf(a))
+//0
+console.log(b.indexOf(a, 1))
+//-1
+console.log(b.indexOf(2, 1))
+//1
 ```
