--- a/调试小帮手.md
+++ b/调试小帮手.md
@@ -1,4 +1,4 @@
-#调试小帮手：console.log()  alert()  typeof
+#调试小帮手：console.log()  alert()  typeof arguments
 每次写js如果出不来东西都很郁闷  
 但是自从用了console.log()  alert()之后  
 对js的理解就越来越深了  
@@ -14,3 +14,7 @@
 还是就是typeof  
 这个是newbie的好伙伴  
 用了typeof你会发现你对js的理解会跟上一层楼
+arguments可以看传入函数的参数  
+arguments是一个数组  
+没有传入参数时是空数组  
+arguments[0]是undefined
