--- a/调试小帮手.md
+++ b/调试小帮手.md
@@ -1,4 +1,4 @@
-#调试小帮手：console.log()  alert()  typeof arguments
+#调试小帮手：debugger / console.log() /  alert() /  typeof / arguments
 每次写js如果出不来东西都很郁闷  
 但是自从用了console.log()  alert()之后  
 对js的理解就越来越深了  
@@ -11,6 +11,7 @@
 当然这样就会多了几行code和调试完之后要把它们删掉有点麻烦  
 但是我还是喜欢这样  
 算是我的小怪癖  
+但是debugger也是调试的一大神器  
 还是就是typeof  
 这个是newbie的好伙伴  
 用了typeof你会发现你对js的理解会跟上一层楼
