--- a/键盘事件.md
+++ b/键盘事件.md
@@ -36,3 +36,16 @@ var x = event.which || event.keyCode;
 要怎么组合运用看你自己的想象力了  
 人有多大胆地有多大产  
 keycode表有点长自己去找度娘要吧
+###常用的keycode  
+a-z : 65-90  
+left : 37  
+up : 38  
+right : 39  
+down : 40  
+大键盘：  
+0-9 : 48-57  
+Enter : 13  
+数字键盘数字：  
+0-9 : 96-105  
+Enter : 108
+
