--- a/数组.md
+++ b/数组.md
@@ -145,3 +145,4 @@ console.log(b.indexOf(a, 1))
 console.log(b.indexOf(2, 1))
 //1
 ```
+###reduce(callbackFunc(prev,curr,currIndex,array)[,initPrev]) 前后两个元素进行处理
